# TechProg

./: README.md
ProjectTMP/final/: CMakeLists.txt  Dockerfile
ProjectTMP/final/UnitTest/: test_parsing.cpp
ProjectTMP/final/client/: CMakeLists.txt  authorization.cpp  authorization.h  authorization.ui  functionClient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myCrypt.h  result.cpp  result.h  result.ui  sha256.h  singleton_client.cpp  singleton_client.h  task1.cpp  task1.h  task1.ui  task2.cpp  task2.h  task2.ui
ProjectTMP/final/include/: RSA.h  databasemanager.h  func2serv.h  gradientdescent.h  mytcpserver.h  spline.h  taskmanager.h
ProjectTMP/final/src/: RSA.cpp  databasemanager.cpp  func2serv.cpp  gradientdescent.cpp  main.cpp  mytcpserver.cpp  spline.cpp  taskmanager.cpp
SuperServer/: SuperServer.pro  SuperServer.pro.user.c350c13  aescrypto.cpp  aescrypto.h  clienthandler.cpp  clienthandler.h  crypto.cpp  crypto.h  database.cpp  database.h  main.cpp  ml_gradient.cpp  ml_gradient.h  requestparser.cpp  requestparser.h  server.cpp  server.h  spline.cpp  spline.h  utils.cpp  utils.h
aes-sha256/aes/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
